objects/Academy_Certification_Program__c.object
<CustomObject>
    <description>Copado Academy Certification Programs</description>
    <fields>
        <fullName>Chamilo_Id__c</fullName>
        <externalId>true</externalId>
        <label>Chamilo Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Copado_Version__c</fullName>
        <description>Current Copado version, to identify features covered on certification</description>
        <label>Copado Version</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Certification Program Description, for example covered features, and brief description.</description>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <description>This field will be used to determinate the Certification Logo that will be rendered on the Verification Site</description>
        <inlineHelpText>Value must match the program.</inlineHelpText>
        <label>Image</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administrator</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Release Manager</fullName>
                </value>
                <value>
                    <fullName>Change Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Certification Program,  Default will be valid.</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Valid</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Academy Certification Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Chamilo_Id__c</columns>
        <columns>Copado_Version__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Certification Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Academy Certification Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>